turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value Couleur
    case Couleur.BLACK =>setCouleurSol(Couleur.WHITE); right(); avance();
         ^LangtonsAnt:7: error: not found: type Couleur
def setCouleurSol(couleur:Couleur){
                          ^LangtonsAnt:2: error: not found: value Couleur
    case Couleur.BLACK =>setCouleurSol(Couleur.WHITE); right(); avance();
                                       ^LangtonsAnt:3: error: not found: value Couleur
    case Couleur.WHITE =>setCouleurSol(Couleur.BLACK); left(); avance();
         ^LangtonsAnt:3: error: not found: value Couleur
    case Couleur.WHITE =>setCouleurSol(Couleur.BLACK); left(); avance();
                                       ^